force-app/main/default/objects/SEG_Operacion__c/SEG_Operacion__c.object-meta.xml
<CustomObject>
    <label>Operación</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Operación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>