force-app/main/default/objects/SEG_Operacion__c/fields/SEG_Detalle__c.field-meta.xml
<CustomField>
    <fullName>SEG_Detalle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalle</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Operaciones (Detalle)</relationshipLabel>
    <relationshipName>Operaciones4</relationshipName>
    <type>Lookup</type>
</CustomField>