force-app/main/default/objects/SEG_Operacion__c/fields/SEG_Foto_de_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Foto_de_Facturacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foto de facturación</label>
    <referenceTo>SEG_Fotosdefacturacion__c</referenceTo>
    <relationshipName>Operaciones</relationshipName>
    <type>Lookup</type>
</CustomField>