force-app/main/default/objects/SEG_Operacion__c/fields/SEG_MCC__c.field-meta.xml
<CustomField>
    <fullName>SEG_MCC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Crear foto de facturación a partir del MCC seleccionado por el usuario en la operativa número de operaciones.</description>
    <label>MCC</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Operaciones</relationshipLabel>
    <relationshipName>Operaciones</relationshipName>
    <type>Lookup</type>
</CustomField>