force-app/main/default/objects/SEG_Operacion__c/fields/SEG_Motivo__c.field-meta.xml
<CustomField>
    <fullName>SEG_Motivo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motivo</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Operaciones (Motivo)</relationshipLabel>
    <relationshipName>Operaciones2</relationshipName>
    <type>Lookup</type>
</CustomField>