force-app/main/default/objects/SEG_Operacion__c/fields/SEG_N_Operaciones__c.field-meta.xml
<CustomField>
    <fullName>SEG_N_Operaciones__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Nº oper.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>