force-app/main/default/objects/SEG_Operacion__c/fields/SEG_Producto__c.field-meta.xml
<CustomField>
    <fullName>SEG_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Operaciones (Producto)</relationshipLabel>
    <relationshipName>Operaciones3</relationshipName>
    <type>Lookup</type>
</CustomField>