force-app/main/default/objects/SEG_Operacion__c/fields/SEG_SR__c.field-meta.xml
<CustomField>
    <fullName>SEG_SR__c</fullName>
    <label>Número Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Operaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>