force-app/main/default/objects/SEG_Operacion__c/fields/SEG_Tematica__c.field-meta.xml
<CustomField>
    <fullName>SEG_Tematica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Temática</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Operaciones (Temática)</relationshipLabel>
    <relationshipName>Operaciones1</relationshipName>
    <type>Lookup</type>
</CustomField>