force-app/main/default/objects/SEG_Operacion__c/fields/SEG_Tipo__c.field-meta.xml
<CustomField>
    <fullName>SEG_Tipo__c</fullName>
    <formula>TEXT(CreatedBy.SEG_Tipo_usuario_SEG__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo</label>
    <type>Text</type>
</CustomField>