force-app/main/default/objects/SEG_Operacion__c/recordTypes/CSO.recordType-meta.xml
<RecordType>
    <fullName>CSO</fullName>
    <active>true</active>
    <label>CSO</label>
</RecordType>